# AOJ

./: .gitignore  CMakeLists.txt  README.md
.cursor/agents/: code-review.md
.cursor/commands/: cr.md
.cursor/rules/: general.md
ITP1/: ITP1_1_B.cpp  ITP1_1_C.cpp  ITP1_1_D.cpp  ITP1_2_A.cpp  ITP1_2_B.cpp  ITP1_2_C.cpp  ITP1_2_D.cpp  ITP1_3_A.cpp  ITP1_3_B.cpp  ITP1_3_C.cpp  ITP1_3_D.cpp  ITP1_4_A.cpp  ITP1_4_B.cpp  ITP1_4_C.cpp  ITP1_4_D.cpp  ITP1_5_A.cpp  ITP1_5_B.cpp  ITP1_5_C.cpp  ITP1_5_D.cpp  ITP1_6_A.cpp  ITP1_6_B.cpp  ITP1_6_C.cpp
